EXTRA_DIST=\
  doxy/acc_script_prop.dp\
  doxy/chk_support.dp\
  doxy/dirs.dp\
  doxy/env.dp\
  doxy/getting_started.dp\
  doxy/glossary.dp\
  doxy/glossary_scripts.dp\
  doxy/glossary_termino.dp\
  doxy/groups.dp\
  doxy/http_metainfo.dp\
  doxy/parse_media.dp\
  doxy/parse_playlist.dp\
  doxy/parse_subtitle.dp\
  doxy/proxy_support.dp\
  doxy/scan_media.dp\
  doxy/select_stream.dp

src=\
  errcode.c\
  errmsg.c\
  file_ext_free.c\
  file_ext_get.c\
  file_ext_new.c\
  free.c\
  get.c\
  http_metainfo_free.c\
  http_metainfo_get.c\
  http_metainfo_new.c\
  media_free.c\
  media_get.c\
  media_new.c\
  media_stream_choose_best.c\
  media_stream_next.c\
  media_stream_reset.c\
  media_stream_select.c\
  new.c\
  ok.c\
  playlist_free.c\
  playlist_get.c\
  playlist_media_next.c\
  playlist_media_reset.c\
  playlist_new.c\
  resolve_destination_url.c\
  resolve_forwarded.c\
  resolve_free.c\
  resolve_new.c\
  scan_free.c\
  scan_new.c\
  scan_next_media_url.c\
  script_get.c\
  script_next.c\
  set.c\
  subtitle_export_data.c\
  subtitle_export_free.c\
  subtitle_export_new.c\
  subtitle_free.c\
  subtitle_lang_get.c\
  subtitle_lang_next.c\
  subtitle_lang_reset.c\
  subtitle_new.c\
  subtitle_select.c\
  subtitle_type_get.c\
  subtitle_type_next.c\
  subtitle_type_reset.c\
  supports.c\
  version.c

noinst_LTLIBRARIES=libconvenience_api.la
libconvenience_api_la_SOURCES=$(src)

libconvenience_api_la_CPPFLAGS=\
  -DLOCALEDIR=\""$(localedir)"\"\
  -I$(top_srcdir)/src/quvi-0.9/\
  -I$(top_srcdir)/src/\
  $(libproxy_CFLAGS)\
  $(liblua_CFLAGS)\
  $(glib_CFLAGS)\
  $(AM_CPPFLAGS)

libconvenience_api_la_CFLAGS=$(AM_CFLAGS)

libconvenience_api_la_LDFLAGS=\
  $(AM_LDFLAGS)

libconvenience_api_la_LIBADD=\
  $(libproxy_LIBS)\
  $(liblua_LIBS)\
  $(glib_LIBS)

# vim: set ts=2 sw=2 tw=72 expandtab:
